--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html>
 <head>
     <title> Animal ABC!</title>
+
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
 <div id="main"></div>
