--- a/component-tests.html
+++ b/component-tests.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
-<div id="main"></div>
+<div id="cmptest">
+</div>
 
-<script src="debug/app-debug.js"></script>
+<script src="debug/component-tests-debug.js"></script>
 </body>
