--- a/index.html
+++ b/index.html
@@ -2,11 +2,23 @@
 <html>
 <head>
     <title> Animal ABC!</title>
-
+    <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <style type="text/css">
+    html, body {
+        font-family: sans-serif;
+    }
+    .title {
+        text-align: center;
+    }
+    </style>
 </head>
 <body>
+<h1 class="title">Animal ABC!</h1>
 <div id="main"></div>
+<audio id="audioPlayer">
+</audio>
 
 <script src="debug/app-debug.js"></script>
 </body>
