--- a/index.html
+++ b/index.html
@@ -8,17 +8,36 @@
     <style type="text/css">
     html, body {
         font-family: sans-serif;
+        margin: 0; padding: 0;
+        width: 100%;
+        height: 100%;
     }
     .title {
         text-align: center;
+    }
+
+    footer {
+        padding: 1em;
+        margin-top: 3em;
+        background-color: #eee;
+        border-top: 1px solid #888;
+        text-align: center;
+        color: #333;
+    }
+    footer a {
+        color: #666;
     }
     </style>
 </head>
 <body>
 <h1 class="title">Animal ABC!</h1>
-<div id="main"></div>
+<div id="main" style="margin: 1em"></div>
 <audio id="audioPlayer">
 </audio>
+
+<footer>
+&copy; 2016 <a href="https://alexi.ch/">Alexander Schenkel</a> | images from <a href="https://pixabay.com">pixabay.com</a> | sounds from <a href="http://soundbible.com">soundbible.com</a>, <a href="http://www.freeinfosociety.com">freeinfosociety.com</a>, <a href="https://www.freesound.org">freesound.org</a>
+</footer>
 
 <script src="debug/app-debug.js"></script>
 </body>
