Updated / improved build system, added distribution build

--- a/index.html
+++ b/index.html
@@ -30,14 +30,15 @@
     </style>
 </head>
 <body>
-<h1 class="title">Animal ABC!</h1>
-<div id="main" style="margin: 1em"></div>
-<audio id="audioPlayer">
-</audio>
+    <h1 class="title">Animal ABC!</h1>
+    <div id="main" style="margin: 1em"></div>
+    <audio id="audioPlayer">
+    </audio>
 
-<footer>
-&copy; 2016 <a href="https://alexi.ch/">Alexander Schenkel</a> | images from <a href="https://pixabay.com">pixabay.com</a> | sounds from <a href="http://soundbible.com">soundbible.com</a>, <a href="http://www.freeinfosociety.com">freeinfosociety.com</a>, <a href="https://www.freesound.org">freesound.org</a>
-</footer>
-
-<script src="debug/app-debug.js"></script>
+    <footer>
+    &copy; 2016 <a href="https://alexi.ch/">Alexander Schenkel</a> | images from <a href="https://pixabay.com">pixabay.com</a> | sounds from <a href="http://soundbible.com">soundbible.com</a>, <a href="http://www.freeinfosociety.com">freeinfosociety.com</a>, <a href="https://www.freesound.org">freesound.org</a>
+    </footer>
+    <!-- build:js app.js -->
+    <script src="debug/app-debug.js"></script>
+    <!-- /build -->
 </body>
