--- a/index.html
+++ b/index.html
@@ -1,9 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title> Animal ABC!</title>
+    <title>Animal ABC!</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <meta name="author" content="Alexander Schenkel <alex@alexi.ch>">
+    <meta name="description" content="Ein kleines Spiel für Kinder, die die Buchstaben des ABC lernen">
+    <meta name="keywords"content="ABC, Tiere, Animals, Lernen, Buchstaben, Tierbilder">
 
     <style type="text/css">
     html, body {
@@ -12,8 +16,15 @@
         width: 100%;
         height: 100%;
     }
+
     .title {
-        text-align: center;
+        margin: 0.5em 1em 0 1em;
+    }
+
+    .title span{
+
+        font-weight: normal;
+        font-size: 10.5pt;
     }
 
     footer {
@@ -30,7 +41,7 @@
     </style>
 </head>
 <body>
-    <h1 class="title">Animal ABC!</h1>
+    <h1 class="title">Animal ABC! <span>Suche die Anfangsbuchstaben der Tiere!</span></h1>
     <div id="main" style="margin: 1em"></div>
 
     <footer>
