--- a/index.html
+++ b/index.html
@@ -9,6 +9,16 @@
     <meta name="description" content="Ein kleines Spiel für Kinder, die die Buchstaben des ABC lernen">
     <meta name="keywords"content="ABC, Tiere, Animals, Lernen, Buchstaben, Tierbilder">
 
+    <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+      ga('create', 'UA-76501637-1', 'auto');
+      ga('send', 'pageview');
+    </script>
+
     <style type="text/css">
     html, body {
         font-family: sans-serif;
