- moved reset button to title bar - this lead to a refactoring: the reset button is now no longer part of the reset button, but of the main app: It now fires a global event via EventMgr, which the GameBoard catches to initiate the reset. - Changed some minor styles

--- a/index.html
+++ b/index.html
@@ -54,11 +54,12 @@
     </style>
 </head>
 <body>
-    <h1 class="title">Animal ABC! <span>Suche die Anfangsbuchstaben der Tiere!</span></h1>
     <div id="main" style="margin: 1em"></div>
 
     <footer>
-    &copy; 2016 <a href="https://alexi.ch/">Alexander Schenkel</a> | images from <a href="https://pixabay.com">pixabay.com</a> | sounds from <a href="http://soundbible.com">soundbible.com</a>, <a href="http://www.freeinfosociety.com">freeinfosociety.com</a>, <a href="https://www.freesound.org">freesound.org</a>
+        <p>&copy; 2016 <a href="https://alexi.ch/">Alexander Schenkel</a> </p>
+        <p>fork me on <a href="https://github.com/bylexus/animal-abc">github</a></p>
+        <p>images from <a href="https://pixabay.com">pixabay.com</a> | sounds from <a href="http://soundbible.com">soundbible.com</a>, <a href="http://www.freeinfosociety.com">freeinfosociety.com</a>, <a href="https://www.freesound.org">freesound.org</a></p>
     </footer>
     <!-- build:js app.js -->
     <script src="debug/app-debug.js"></script>
