--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <meta name="description" content="Ein kleines Spiel für Kinder, die die Buchstaben des ABC lernen">
     <meta name="keywords"content="ABC, Tiere, Animals, Lernen, Buchstaben, Tierbilder">
 
+    <link rel="stylesheet" href="main.css">
+
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
       (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -18,40 +20,6 @@
       ga('create', 'UA-76501637-1', 'auto');
       ga('send', 'pageview');
     </script>
-
-    <style type="text/css">
-    html, body {
-        font-family: sans-serif;
-        margin: 0; padding: 0;
-        width: 100%;
-        height: 100%;
-    }
-
-    .title {
-        margin: 0.5em 1em 0 1em;
-    }
-
-    .title span {
-        display: block;
-        font-weight: normal;
-        font-size: 10.5pt;
-    }
-    @media all and (min-device-width: 768px) {
-        .title span { display: inline-block; }
-    }
-
-    footer {
-        padding: 1em;
-        margin-top: 3em;
-        background-color: #eee;
-        border-top: 1px solid #888;
-        text-align: center;
-        color: #333;
-    }
-    footer a {
-        color: #666;
-    }
-    </style>
 </head>
 <body>
     <div id="main" style="margin: 1em"></div>
