Changed appear transition to use react plugin ReactCSSTransitionGroup

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </script>
 </head>
 <body>
-    <div id="main" style="margin: 1em"></div>
+    <div id="main" style="margin: 1em"><img src="resources/ajax-loader.gif" alt="lade" /> Lade ...</div>
 
     <footer>
         <p>&copy; 2016 <a href="https://alexi.ch/">Alexander Schenkel</a> </p>
